// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateBar should render correctly with a children 1`] = `
<DocumentFragment>
  .cache-1xgu0ny {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-1xgu0ny.cache-1xgu0ny {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-1ydlh59 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-1ydlh59.cache-1ydlh59 {
  margin-left: 8px;
}

.cache-5hex0u-StateBarBar {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-24u8l6 {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="e1g1zfwd0 cache-1xgu0ny e7ah3bn0"
    >
      <strong>
        : 
      </strong>
      <span
        class="e1g1zfwd0 cache-1ydlh59 e7ah3bn0"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="et8xa2y2 cache-5hex0u-StateBarBar e7ah3bn0"
      role="progressbar"
    >
      <div
        class="cache-24u8l6 et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with a value < 90 1`] = `
<DocumentFragment>
  .cache-1xgu0ny {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-1xgu0ny.cache-1xgu0ny {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-1ydlh59 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-1ydlh59.cache-1ydlh59 {
  margin-left: 8px;
}

.cache-5hex0u-StateBarBar {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-1fwcdpa {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 89%;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="e1g1zfwd0 cache-1xgu0ny e7ah3bn0"
    >
      <strong>
        : 
      </strong>
      <span
        class="e1g1zfwd0 cache-1ydlh59 e7ah3bn0"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="89"
      class="et8xa2y2 cache-5hex0u-StateBarBar e7ah3bn0"
      role="progressbar"
    >
      <div
        class="cache-1fwcdpa et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with a value >= 90 1`] = `
<DocumentFragment>
  .cache-1xgu0ny {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-1xgu0ny.cache-1xgu0ny {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-1ydlh59 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-1ydlh59.cache-1ydlh59 {
  margin-left: 8px;
}

.cache-5hex0u-StateBarBar {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-9vex8i {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #ef5774;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 90%;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="e1g1zfwd0 cache-1xgu0ny e7ah3bn0"
    >
      <strong>
        : 
      </strong>
      <span
        class="e1g1zfwd0 cache-1ydlh59 e7ah3bn0"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="90"
      class="et8xa2y2 cache-5hex0u-StateBarBar e7ah3bn0"
      role="progressbar"
    >
      <div
        class="cache-9vex8i et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with default props 1`] = `
<DocumentFragment>
  .cache-1xgu0ny {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-1xgu0ny.cache-1xgu0ny {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-5hex0u-StateBarBar {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-24u8l6 {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="e1g1zfwd0 cache-1xgu0ny e7ah3bn0"
    >
      <strong />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="et8xa2y2 cache-5hex0u-StateBarBar e7ah3bn0"
      role="progressbar"
    >
      <div
        class="cache-24u8l6 et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with unlimited value 1`] = `
<DocumentFragment>
  .cache-1xgu0ny {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: #151a2d;
}

.cache-1xgu0ny.cache-1xgu0ny {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 500;
}

.cache-1ydlh59 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
}

.cache-1ydlh59.cache-1ydlh59 {
  margin-left: 8px;
}

.cache-5hex0u-StateBarBar {
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #dce1eb;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-tsbjjr {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #45d6b5;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 100%;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="e1g1zfwd0 cache-1xgu0ny e7ah3bn0"
    >
      <strong>
        : 
      </strong>
      <span
        class="e1g1zfwd0 cache-1ydlh59 e7ah3bn0"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="et8xa2y2 cache-5hex0u-StateBarBar e7ah3bn0"
      role="progressbar"
    >
      <div
        class="cache-tsbjjr et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;
